# aiops-diagnostic-agent

./: .env.example  .gitignore  README.md  ai_dev_guide.md  cli.py  project_plan.md  pyproject.toml
evals/: golden_cases.yaml
examples/: alert_buffering_rate_rise.json  alert_first_frame_latency.json  alert_play_rate_drop.json
runbooks/p2p_bandwidth_share/: _meta.yaml  analysis_plan.yaml  rules_box_sharing.yaml  rules_phone_sharing.yaml  rules_rtm_expansion.yaml
runbooks/play_success_rate/: _meta.yaml  analysis_plan.yaml  rules_cdn_fault.yaml  rules_client_bug.yaml  rules_isp_fault.yaml  rules_network_issue.yaml
src/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
src/data/: __init__.py  models.py  scenarios.py  simulator.py
src/knowledge/: __init__.py  rule_matcher.py  runbook_loader.py
src/llm/: __init__.py  base.py  claude.py  openai.py  zhipu.py
src/report/: __init__.py  markdown.py
src/tools/: __init__.py  analyze_correlation.py  check_changes.py  compare_points.py  concentration.py  contribution.py  decompose_formula.py  decompose_metric.py  drill_down.py  match_events.py  query_events.py  query_logs.py  query_metric.py  query_metrics.py  search_logs.py
tests/: test_agent_nodes.py  test_golden_cases.py  test_knowledge.py  test_route_metric.py  test_scenarios.py  test_tools.py
