[project]
name = "aiops-diagnostic-agent"
version = "0.1.0"
description = "基于 LangGraph 的 AIOps 智能归因 Agent"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/agent/prompts.py" = ["E501"]
"src/data/scenarios.py" = ["E501"]
"src/tools/*.py" = ["E501"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require LLM API calls",
]
